# use-it-agent

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README-backup.md  README.md  env.example  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
electron/: main.ts  preload.ts  vncProxy.ts
electron/ipcHandle/: devIpcHandle.ts  projectIpcHandle.ts  windowControlIpcHandle.ts
electron/recorder/: OUTPUT_FORMAT.md  ipc.ts
electron/services/: computerConfigParser.ts  computerPoolManager.ts  computerServerManager.ts  localEngineManager.ts  presignedUploader.ts  serviceDeployer.ts  vmInstaller.ts  vmShareManager.ts
frontend/: .gitignore  .npmrc  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/electron/: preload.ts  tsconfig.json
frontend/scripts/: prepare-ffmpeg.js
frontend/src/: main.tsx  vite-env.d.ts
src/: App.tsx  vite-env.d.ts
src/api/: core.ts  subscription.ts
src/components/: AlertDialog.tsx  DropdownMenu.tsx  Modal.tsx  PageTransition.tsx  WindowControlButton.tsx
src/config/: runtimeEnv.ts
src/contexts/: ProjectContext.tsx
src/hooks/: useComputerPool.ts
src/lib/: supabase.ts
src/local_engine/: .gitignore  agent_ndjson_debug.py  local_engine.spec  logging_config.py  main.py
src/pages/: WorkspacePage.tsx
src/services/: computerRouter.ts  remoteTaskPoller.ts
src/stores/: projectStore.ts  rootStore.ts  useRemotePolling.ts  useWorkspaceStore.ts
src/styles/: globals.css
src/types/: computer.ts  project.ts
types/: axios.d.ts  chat.d.ts  electron.d.ts  user.d.ts
(+675 files in other folders)
