[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "useit-studio"
version = "0.1.0"
description = "UseIt Studio OSS — gateway + AI Run (LangChain) monorepo package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic",
    "python-dotenv",
    "requests",
    "httpx",
    "python-multipart",
    "Pillow",
]

[project.optional-dependencies]
agent = [
    "pyautogui",
    "opencv-python",
    "textdistance",
    "boto3",
    "jinja2>=3.0.0",
    "weasyprint>=62.1",
    "openai>=1.0.0",
    "psycopg2-binary",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "toon-format>=0.9.0b1",
    "langchain",
    "langchain-core",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph",
    "langchain-google-genai",
    "mcp>=1.0.0",
    "redis>=5.0.0",
]
local-engine = [
    "pywin32",
    "python-pptx>=1.0.0",
    "python-docx>=1.0.0",
    "mss",
    "openpyxl",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "browser-use>=0.1.0",
    "uiautomation>=2.0.0",
    "pynput",
    "psutil>=5.9.0",
]
dev = ["pytest", "ruff"]

[project.scripts]
useit-gateway = "useit_studio.gateway.main:run"
useit-unified = "useit_studio.gateway.unified_main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"useit_studio.gateway" = ["data/**/*", "config/**/*"]
